@@ -103,10 +103,12 @@ public:
   static const page_format page_formats[NO_PAGE_FORMATS];  
   /** \brief The destructor */
   virtual ~Fl_Paged_Device() {};
-  virtual int begin_job(int pagecount = 0, int *frompage = NULL, int *topage = NULL);
-  /** Synonym of begin_job(int pagecount, int *frompage, int *topage).
+  virtual int begin_job(int pagecount = 0, int *frompage = NULL, int *topage = NULL, char **perr_message = NULL);
+  /** Synonym of begin_job(int pagecount, int *frompage, int *topage, char **perr_message).
    For API compatibility with FLTK 1.3.x */
-  int start_job(int pagecount = 0, int *frompage = NULL, int *topage = NULL) {return begin_job(pagecount, frompage, topage);}
+  int start_job(int pagecount = 0, int *frompage = NULL, int *topage = NULL, char **perr_message = NULL) {
+    return begin_job(pagecount, frompage, topage, perr_message);
+  }
   virtual int begin_page(void);
   /** Synonym of begin_page().
    For API compatibility with FLTK 1.3.x */
