@@ -93,7 +93,7 @@ private:
 public:
   /** The constructor */
   Fl_Printer(void);
-  int begin_job(int pagecount = 0, int *frompage = NULL, int *topage = NULL);
+  int begin_job(int pagecount = 0, int *frompage = NULL, int *topage = NULL, char **perr_message = NULL);
   int begin_page(void);
   int printable_rect(int *w, int *h);
   void margins(int *left, int *top, int *right, int *bottom);
