@@ -119,6 +119,8 @@ Changes in FLTK 1.4.0					Released: ??? ?? 2020
   Other Improvements
 
   - (add new items here)
+  - Add optional argument to Fl_Printer::begin_job() to receive
+    a string describing the error when an error occurs.
   - Fix Windows-specific bug when the program tries to enlarge a
     maximized window, that would freeze the window (git issue #65).
   - Improve X11 16-bit coordinate clipping for text (STR 2798). This
